[package]
name = "sickle_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
sickle_math = { path = "crates/sickle_math" }
sickle_macros = { path = "crates/sickle_macros" }

bevy = { version = "0.13" }
bevy_reflect = { version = "0.13" }

[dev-dependencies]
bevy_ecs = { version = "0.13" }
